objects/sbaa__Approval__c.object
<CustomObject>
    <customHelpPage>sbaa__ApprovalHelp</customHelpPage>
    <description>Approval by individual for specific record.</description>
    <fields>
        <fullName>Account_Renewal_Model__c</fullName>
        <formula>Quote__r.Account_Renewal_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Renewal Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>sbaa__Opportunity__r.Account.Name + Quote__r.SBQQ__Opportunity2__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note</label>
        <referenceTo>blng__CreditNote__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Amount__c</fullName>
        <formula>CreditNote__r.blng__Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Note Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <formula>DATEVALUE(CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>(1- (sbaa__Opportunity__r.SBQQ__PrimaryQuote__r.SBQQ__ListAmount__c / sbaa__Opportunity__r.SBQQ__PrimaryQuote__r.SBQQ__NetAmount__c ))*100
+
(1- (Quote__r.SBQQ__Opportunity2__r.SBQQ__PrimaryQuote__r.SBQQ__ListAmount__c / Quote__r.SBQQ__Opportunity2__r.SBQQ__PrimaryQuote__r.SBQQ__NetAmount__c ))*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Finance_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Run</label>
        <referenceTo>blng__InvoiceRun__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Quote__r.Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opp_Amount__c</fullName>
        <formula>sbaa__Opportunity__r.Amount 
+ 
Quote__r.SBQQ__Opportunity2__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Stage__c</fullName>
        <formula>Text(sbaa__Opportunity__r.StageName)+TEXT( Quote__r.SBQQ__Opportunity2__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>sbaa__Opportunity__r.Name +Quote__r.SBQQ__Opportunity2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <formula>TEXT( Quote__r.SBQQ__PaymentTerms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Amount__c</fullName>
        <formula>Quote__r.SBQQ__NetAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Discount__c</fullName>
        <formula>Quote__r.SBQQ__AverageCustomerDiscount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <formula>sbaa__Rule__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <formula>Quote_Line__r.Request__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company_image__c</fullName>
        <formula>$Setup.Q2C_Demo_Settings__c.Company_Image_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>company image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__Actions__c</fullName>
        <formula>HYPERLINK( &quot;/apex/sbaa__Approve?id=&quot; &amp; Id, $Label.sbaa__lbl_approve, &quot;_self&quot;) + &quot; | &quot; + HYPERLINK( &quot;/apex/sbaa__Reject?id=&quot; &amp; Id, $Label.sbaa__lbl_reject, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalChain__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Approval Chain to which this Approval belongs</description>
        <inlineHelpText>Approval Chain to which this Approval belongs</inlineHelpText>
        <label>Approval Chain</label>
        <referenceTo>sbaa__ApprovalChain__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStep__c</fullName>
        <description>Step (level) at which this approval is required.</description>
        <inlineHelpText>Step (level) at which this approval is required.</inlineHelpText>
        <label>Approval Step</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalTemplateId__c</fullName>
        <description>ID of the Email Template associated with Approval</description>
        <inlineHelpText>ID of the Email Template associated with Approval</inlineHelpText>
        <label>Approval Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who approved this Approval</description>
        <inlineHelpText>User who approved this Approval</inlineHelpText>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovedApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApproverField__c</fullName>
        <description>Used with Dynamic Approvers, to capture the field name containing the Approver value</description>
        <inlineHelpText>Used with Dynamic Approvers, to capture the field name containing the Approver value</inlineHelpText>
        <label>Approver Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__Approver__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Approver associated with this Approval.</description>
        <inlineHelpText>Lookup to the Approver associated with this Approval.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Archived Approvals is enabled, indicates that this Approval is archived</description>
        <inlineHelpText>When Archived Approvals is enabled, indicates that this Approval is archived</inlineHelpText>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__AssignedGroupId__c</fullName>
        <description>ID of the Group the Approval is assigned to, if applicable</description>
        <inlineHelpText>ID of the Group the Approval is assigned to, if applicable</inlineHelpText>
        <label>Assigned Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__AssignedToMe__c</fullName>
        <description>True if the current User is also the Assigned To User</description>
        <formula>sbaa__AssignedTo__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if the current User is also the Assigned To User</inlineHelpText>
        <label>Assigned To Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User to which the Approval is assigned</description>
        <inlineHelpText>Lookup to the User to which the Approval is assigned</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__CommentsLong__c</fullName>
        <description>Approver&apos;s Comments</description>
        <inlineHelpText>Approver&apos;s Comments</inlineHelpText>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sbaa__DelegatedApprover__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>If Delegated Approvals is enabled, lookup to the delegated Approver</description>
        <inlineHelpText>If Delegated Approvals is enabled, lookup to the delegated Approver</inlineHelpText>
        <label>Delegated Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Delegated Approvals</relationshipLabel>
        <relationshipName>DelegatedApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity being approved</description>
        <inlineHelpText>Opportunity being approved</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RecallTemplateId__c</fullName>
        <description>ID of the Email Template associated with Recalls</description>
        <inlineHelpText>ID of the Email Template associated with Recalls</inlineHelpText>
        <label>Recall Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RecordField__c</fullName>
        <description>API Name of the Approval field looking up to the record being approved</description>
        <inlineHelpText>API Name of the Approval field looking up to the record being approved</inlineHelpText>
        <label>Record Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RejectedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who rejected this Approval</description>
        <inlineHelpText>User who rejected this Approval</inlineHelpText>
        <label>Rejected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RejectedApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RejectionTemplateId__c</fullName>
        <description>ID of the Email Template associated with Rejection</description>
        <inlineHelpText>ID of the Email Template associated with Rejection</inlineHelpText>
        <label>Rejection Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RequestTemplateId__c</fullName>
        <description>ID of the Email Template associated with Approval Requests</description>
        <inlineHelpText>ID of the Email Template associated with Approval Requests</inlineHelpText>
        <label>Request Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RequireExplicitApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default, approving any Approval will auto-approve all other Approvals assigned to the same User. If this box is checked, an Approval originated by this Rule will not be auto-approved and must be explicitly approved.</description>
        <inlineHelpText>By default, approving any Approval will auto-approve all other Approvals assigned to the same User. If this box is checked, an Approval originated by this Rule will not be auto-approved and must be explicitly approved.</inlineHelpText>
        <label>Require Explicit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval rule that generated this approval.</description>
        <inlineHelpText>Approval rule that generated this approval.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>sbaa__ApprovalRule__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Status__c</fullName>
        <description>Status of this approval.</description>
        <inlineHelpText>Status of this approval.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__Unanimous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Approver is a Group, checked if all members need to Approve in order to consider the Approval approved</description>
        <inlineHelpText>If Approver is a Group, checked if all members need to Approve in order to consider the Approval approved</inlineHelpText>
        <label>Unanimous</label>
        <type>Checkbox</type>
    </fields>
    <label>Approval</label>
    <listViews>
        <fullName>My_Approvals</fullName>
        <columns>NAME</columns>
        <columns>sbaa__Actions__c</columns>
        <columns>sbaa__CommentsLong__c</columns>
        <columns>Quote__c</columns>
        <columns>sbaa__Rule__c</columns>
        <columns>sbaa__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sbaa__Status__c</field>
            <operation>equals</operation>
            <value>Assigned,Requested</value>
        </filters>
        <filters>
            <field>sbaa__AssignedToMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Approvals</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Approval #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>